level 1 data cleaning completed

--- a/text_processing.ipynb
+++ b/text_processing.ipynb
@@ -499,6 +499,93 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['review'] = data['review'].apply(remove_punc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review</th>\n",
+       "      <th>sentiment</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ONE OF THE OTHER REVIEWERS HAS MENTIONED THAT ...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A WONDERFUL LITTLE PRODUCTION THE FILMING TECH...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>I THOUGHT THIS WAS A WONDERFUL WAY TO SPEND TI...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>BASICALLY THERES A FAMILY WHERE A LITTLE BOY J...</td>\n",
+       "      <td>negative</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>PETTER MATTEIS LOVE IN THE TIME OF MONEY IS A ...</td>\n",
+       "      <td>positive</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              review sentiment\n",
+       "0  ONE OF THE OTHER REVIEWERS HAS MENTIONED THAT ...  positive\n",
+       "1  A WONDERFUL LITTLE PRODUCTION THE FILMING TECH...  positive\n",
+       "2  I THOUGHT THIS WAS A WONDERFUL WAY TO SPEND TI...  positive\n",
+       "3  BASICALLY THERES A FAMILY WHERE A LITTLE BOY J...  negative\n",
+       "4  PETTER MATTEIS LOVE IN THE TIME OF MONEY IS A ...  positive"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
